<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>hu.bme.mit.incqueryd</groupId>
	<artifactId>hu.bme.mit.incqueryd</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>IncQuery-D</name>
	<packaging>pom</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.showWarnings>true</maven.compiler.showWarnings>
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
		<tycho.version>0.20.0</tycho.version>
		<emf.version>2.9.1-v20130827-0309</emf.version>
		<xtend.version>2.7.2</xtend.version>
		<incquery.version>0.9.0-SNAPSHOT</incquery.version>
		<incquery.update.site>http://download.eclipse.org/incquery/updates/integration</incquery.update.site>
		<dropwizard.version>0.7.0</dropwizard.version>
	</properties>
	<repositories>
		<repository>
			<id>emf-incquery</id>
			<url>https://repo.eclipse.org/content/repositories/emf-incquery</url>
		</repository>
	</repositories>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.11</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>16.0.1</version>
			</dependency>
			<dependency>
				<groupId>org.scala-lang</groupId>
				<artifactId>scala-library</artifactId>
				<version>2.10.2</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.emf</groupId>
				<artifactId>org.eclipse.emf.common</artifactId>
				<version>${emf.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.emf</groupId>
				<artifactId>org.eclipse.emf.ecore</artifactId>
				<version>${emf.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.emf</groupId>
				<artifactId>org.eclipse.emf.ecore.xmi</artifactId>
				<version>${emf.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.xtend</groupId>
				<artifactId>org.eclipse.xtend.lib</artifactId>
				<version>${xtend.version}</version>
			</dependency>
			<dependency>
				<groupId>com.typesafe.akka</groupId>
				<artifactId>akka-actor_2.10</artifactId>
				<version>2.1.4</version>
			</dependency>
			<dependency>
				<groupId>com.typesafe.akka</groupId>
				<artifactId>akka-remote_2.10</artifactId>
				<version>2.1.4</version>
			</dependency>
			<dependency>
				<groupId>com.typesafe.akka</groupId>
				<artifactId>akka-kernel_2.10</artifactId>
				<version>2.1.4</version>
			</dependency>
			<dependency>
				<groupId>com.typesafe.akka</groupId>
				<artifactId>akka-testkit_2.10</artifactId>
				<version>2.1.4</version>
			</dependency>
			<dependency>
				<groupId>io.spray</groupId>
				<artifactId>spray-can</artifactId>
				<version>1.1.1</version>
			</dependency>
			<dependency>
				<groupId>io.spray</groupId>
				<artifactId>spray-http</artifactId>
				<version>1.1.1</version>
			</dependency>
			<dependency>
				<groupId>io.spray</groupId>
				<artifactId>spray-httpx</artifactId>
				<version>1.1.1</version>
			</dependency>
			<dependency>
				<groupId>io.spray</groupId>
				<artifactId>spray-routing</artifactId>
				<version>1.1.1</version>
			</dependency>
			<dependency>
				<groupId>io.spray</groupId>
				<artifactId>spray-client</artifactId>
				<version>1.1.1</version>
			</dependency>
			<dependency>
				<groupId>io.spray</groupId>
				<artifactId>spray-json_2.10</artifactId>
				<version>1.2.5</version>
			</dependency>
		  <dependency>
			  <groupId>org.eclipse.incquery</groupId>
			  <artifactId>org.eclipse.incquery.runtime.rete.recipes</artifactId>
			  <version>${incquery.version}</version>
  		</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-maven-plugin</artifactId>
					<version>${tycho.version}</version>
					<extensions>true</extensions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-packaging-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<strictBinIncludes>false</strictBinIncludes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.scala-tools</groupId>
					<artifactId>maven-scala-plugin</artifactId>
					<version>2.10.1</version>
					<executions>
						<execution>
							<id>scala-compile-first</id>
							<phase>process-resources</phase>
							<goals>
								<goal>add-source</goal>
								<goal>compile</goal>
							</goals>
						</execution>
						<execution>
							<id>scala-test-compile</id>
							<phase>process-test-resources</phase>
							<goals>
								<goal>testCompile</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.xtend</groupId>
					<artifactId>xtend-maven-plugin</artifactId>
					<version>${xtend.version}</version>
					<executions>
						<execution>
							<goals>
								<goal>compile</goal>
								<goal>testCompile</goal>
								<goal>xtend-install-debug-info</goal>
								<goal>xtend-test-install-debug-info</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<outputDirectory>xtend-gen</outputDirectory>
						<testOutputDirectory>xtend-gen</testOutputDirectory>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<modules>
		<module>hu.bme.mit.incqueryd.client</module>
		<module>hu.bme.mit.incqueryd.runtime</module>
		<module>hu.bme.mit.incqueryd.test</module>
	</modules>
</project>